src/objects/Incentive_Structure__c.object
<CustomObject>
    <description>Incentive Structure contains several constants that specify the current CKW payment scheme. The Start Date field indicates when this version of the incentive structure goes into effect. Formulas that calculate CKW payments are expected to look up the newest version of the Incentive Structure for their calculations.</description>
    <fields>
        <fullName>Airtime_Compensation__c</fullName>
        <description>The standard amount that all CKWs are compensated for airtime</description>
        <label>Airtime Compensation</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_A_Compensation__c</fullName>
        <description>The compensation awarded for Level A performance</description>
        <label>Level A Compensation</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_A_Threshold__c</fullName>
        <description>The percentage of target that must be reached to qualify for Level A compensation</description>
        <label>Level A Threshold</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_B_Compensation__c</fullName>
        <description>The compensation awarded for Level B performance</description>
        <label>Level B Compensation</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_B_Threshold__c</fullName>
        <description>The percentage of target that must be reached to qualify for Level B compensation</description>
        <label>Level B Threshold</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_C_Compensation__c</fullName>
        <description>The compensation awarded for Level C performance</description>
        <label>Level C Compensation</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_C_Threshold__c</fullName>
        <description>The percentage of target that must be reached to qualify for Level C compensation</description>
        <label>Level C Threshold</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_D_Compensation__c</fullName>
        <description>The compensation awarded for Level D performance</description>
        <label>Level D Compensation</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Term_Airtime_Bonus__c</fullName>
        <description>The amount of airtime that the current incentive scheme awards for long term bonuses (based on six months of performance). If there is no long term airtime bonus this month, then the value should be 0.</description>
        <label>Long Term Airtime Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Term_Cash_Bonus__c</fullName>
        <description>The amount of cash that the current incentive scheme awards for long term bonuses (based on six months of performance). If there is no long term cash bonus this month, then the value should be 0.</description>
        <label>Long Term Cash Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_Term_Airtime_Bonus__c</fullName>
        <description>The amount of airtime that the current incentive scheme awards for medium term bonuses (based on three months of performance). If there is no medium term airtime bonus this month, then the value should be 0.</description>
        <label>Medium Term Airtime Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_Term_Cash_Bonus__c</fullName>
        <description>The amount of cash that the current incentive scheme awards for medium term bonuses (based on three months of performance). If there is no medium term cash bonus this month, then the value should be 0.</description>
        <label>Medium Term Cash Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Formula_Description__c</fullName>
        <description>A text comment that describes the algorithm in effect for calculating payment. We need this for historical purposes -- if we need to go back and audit payments in the future, it is helpful to know what formula we were using to calculate payments due. We cannot rely on object versioning to give us this history, because there is no versioning of formulas.</description>
        <label>Payment Formula Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Term_Airtime_Bonus__c</fullName>
        <description>The amount of airtime that the current incentive scheme awards for short term bonuses (based on one month of performance). If there is no short term airtime bonus this month, then the value should be 0.</description>
        <label>Short Term Airtime Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Cash_Bonus__c</fullName>
        <description>The amount of cash that the current incentive scheme awards for short term bonuses (based on one month of performance). If there is no short term cash bonus this month, then the value should be 0.</description>
        <label>Short Term Cash Bonus</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date that this version of the incentive structure goes into effect. We need this field because we may change the incentive structure over time, and we want to keep track of the historical changes. Our algorithm for calculating payment will always look up the most recent version of the incentive structure.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Incentive Structure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incentive Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Structures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>